gloo-all/20-lets-encrypt-edge-tls/default-tls-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: nip-io-tls
      namespace: default
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /httpbin
      routeAction:
        single:
          upstream:
            name: httpbin-static
            namespace: gloo-system 
      options:
        prefixRewrite: '/headers'               
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-web-api-8080
            namespace: gloo-system
