gloo-all/20-lets-encrypt-edge-tls/default-vs-tls.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: ceposta-gloo-demo-dns
      namespace: gloo-system      
    sniDomains:
    - ceposta-gloo-demo.solo.io      
  virtualHost:
    domains:
    - 'ceposta-gloo-demo.solo.io'
    routes:
    - matchers:
      - prefix: /httpbin
      routeAction:
        single:
          upstream:
            name: httpbin-static
            namespace: gloo-system 
      options:
        prefixRewrite: '/headers'               
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-web-api-8080
            namespace: gloo-system
